--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   carousel_slider: ^3.0.0
   scrollable_positioned_list: ^0.1.9
   loadmore: ^1.0.4
+  flutter_responsive: ^0.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -52,6 +53,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/
     - images/avatar.png
   #   - images/a_dot_ham.jpeg
 
